--- a/Example/Example/Example/Base.lproj/Main.storyboard
+++ b/Example/Example/Example/Base.lproj/Main.storyboard
@@ -1,8 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="LbI-72-HSW">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="LbI-72-HSW">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -10,7 +15,7 @@
             <objects>
                 <navigationController storyboardIdentifier="Navigation" useStoryboardIdentifierAsRestorationIdentifier="YES" id="LbI-72-HSW" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Z4W-L4-oGy">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -19,7 +24,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1BD-qx-dx1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-96" y="361"/>
+            <point key="canvasLocation" x="-391" y="379"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="sqi-Df-O94">
@@ -30,78 +35,60 @@
                         <viewControllerLayoutGuide type="bottom" id="86m-Co-1nN"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="BrS-Eu-kgM">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Li" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o6t-oY-ISF">
-                                <rect key="frame" x="290" y="74" width="20" height="40"/>
+                                <rect key="frame" x="178" y="74" width="20" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="42" id="HGm-4t-XS8"/>
-                                    <constraint firstAttribute="height" constant="40" id="LQT-pf-Tz5"/>
+                                    <constraint firstAttribute="height" constant="40" id="4K8-LU-jFm"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="HGm-4t-XS8"/>
-                                    </mask>
-                                </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x2m-HZ-CTH">
-                                <rect key="frame" x="50" y="520" width="38" height="30"/>
+                                <rect key="frame" x="50" y="587" width="38" height="30"/>
                                 <state key="normal" title="Login"/>
                                 <connections>
                                     <action selector="login" destination="C1e-JL-lFR" eventType="touchUpInside" id="SgF-uU-1Pg"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3yO-4r-TAf">
-                                <rect key="frame" x="446" y="520" width="104" height="30"/>
+                                <rect key="frame" x="221" y="587" width="104" height="30"/>
                                 <state key="normal" title="Request Profile"/>
                                 <connections>
                                     <action selector="requestProfile" destination="C1e-JL-lFR" eventType="touchUpInside" id="FDk-yx-YAa"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="This is output console, wait for Login now." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ndA-qQ-P8c">
-                                <rect key="frame" x="0.0" y="134" width="600" height="356"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="0.0" y="134" width="375" height="423"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="ndA-qQ-P8c" secondAttribute="trailing" id="32l-ra-oQa"/>
-                            <constraint firstItem="o6t-oY-ISF" firstAttribute="centerY" secondItem="BrS-Eu-kgM" secondAttribute="centerY" id="37F-Mi-hZ2"/>
-                            <constraint firstAttribute="trailing" secondItem="3yO-4r-TAf" secondAttribute="trailing" constant="50" id="Dcs-bv-OpQ"/>
-                            <constraint firstItem="o6t-oY-ISF" firstAttribute="top" secondItem="6ok-Xl-m8E" secondAttribute="bottom" constant="10" id="Fr9-CJ-63f"/>
-                            <constraint firstItem="x2m-HZ-CTH" firstAttribute="baseline" secondItem="3yO-4r-TAf" secondAttribute="baseline" id="GC8-CT-ti9"/>
-                            <constraint firstItem="86m-Co-1nN" firstAttribute="top" secondItem="x2m-HZ-CTH" secondAttribute="bottom" constant="50" id="GzO-BP-qKt"/>
-                            <constraint firstItem="ndA-qQ-P8c" firstAttribute="leading" secondItem="BrS-Eu-kgM" secondAttribute="leading" id="Imn-7K-O73"/>
-                            <constraint firstItem="o6t-oY-ISF" firstAttribute="bottom" secondItem="6ok-Xl-m8E" secondAttribute="bottom" id="LLg-wO-2zp"/>
-                            <constraint firstItem="o6t-oY-ISF" firstAttribute="top" secondItem="BrS-Eu-kgM" secondAttribute="top" constant="50" id="PqX-qb-ezr"/>
-                            <constraint firstItem="86m-Co-1nN" firstAttribute="top" secondItem="o6t-oY-ISF" secondAttribute="bottom" constant="580" id="Q1m-5w-TYh"/>
-                            <constraint firstItem="x2m-HZ-CTH" firstAttribute="top" secondItem="ndA-qQ-P8c" secondAttribute="bottom" constant="30" id="dha-95-OtT"/>
-                            <constraint firstItem="86m-Co-1nN" firstAttribute="top" secondItem="o6t-oY-ISF" secondAttribute="bottom" constant="280" id="dqo-JU-Ojm"/>
-                            <constraint firstItem="86m-Co-1nN" firstAttribute="top" secondItem="o6t-oY-ISF" secondAttribute="bottom" constant="580" id="f27-3V-TzH"/>
-                            <constraint firstItem="o6t-oY-ISF" firstAttribute="centerX" secondItem="ndA-qQ-P8c" secondAttribute="centerX" id="ldb-ib-nkJ"/>
-                            <constraint firstItem="ndA-qQ-P8c" firstAttribute="top" secondItem="BrS-Eu-kgM" secondAttribute="top" constant="30" id="ofZ-oD-6uK"/>
-                            <constraint firstItem="ndA-qQ-P8c" firstAttribute="top" secondItem="o6t-oY-ISF" secondAttribute="bottom" constant="20" id="uJO-Mt-Q7h"/>
-                            <constraint firstItem="x2m-HZ-CTH" firstAttribute="leading" secondItem="BrS-Eu-kgM" secondAttribute="leading" constant="50" id="us9-8f-0Ys"/>
+                            <constraint firstAttribute="trailing" secondItem="ndA-qQ-P8c" secondAttribute="trailing" id="4qP-Xu-VWi"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="3yO-4r-TAf" secondAttribute="trailing" constant="34" id="8iO-IQ-IKf"/>
+                            <constraint firstItem="x2m-HZ-CTH" firstAttribute="leading" secondItem="BrS-Eu-kgM" secondAttribute="leadingMargin" constant="34" id="BXk-cy-jg5"/>
+                            <constraint firstItem="86m-Co-1nN" firstAttribute="top" secondItem="x2m-HZ-CTH" secondAttribute="bottom" constant="50" id="Hy8-QS-STs"/>
+                            <constraint firstItem="o6t-oY-ISF" firstAttribute="top" secondItem="6ok-Xl-m8E" secondAttribute="bottom" constant="10" id="KYP-6p-Pcm"/>
+                            <constraint firstItem="ndA-qQ-P8c" firstAttribute="leading" secondItem="BrS-Eu-kgM" secondAttribute="leading" id="Qde-qh-o19"/>
+                            <constraint firstItem="ndA-qQ-P8c" firstAttribute="top" secondItem="o6t-oY-ISF" secondAttribute="bottom" constant="20" id="Za4-J3-YJl"/>
+                            <constraint firstItem="o6t-oY-ISF" firstAttribute="centerX" secondItem="ndA-qQ-P8c" secondAttribute="centerX" id="c1Q-Xx-i48"/>
+                            <constraint firstItem="x2m-HZ-CTH" firstAttribute="top" secondItem="ndA-qQ-P8c" secondAttribute="bottom" constant="30" id="cnG-1j-gjL"/>
+                            <constraint firstItem="x2m-HZ-CTH" firstAttribute="baseline" secondItem="3yO-4r-TAf" secondAttribute="baseline" id="wZU-QJ-Lb4"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="ofZ-oD-6uK"/>
-                                <exclude reference="37F-Mi-hZ2"/>
-                                <exclude reference="LLg-wO-2zp"/>
-                                <exclude reference="PqX-qb-ezr"/>
-                                <exclude reference="dqo-JU-Ojm"/>
-                                <exclude reference="f27-3V-TzH"/>
-                                <exclude reference="Q1m-5w-TYh"/>
-                            </mask>
-                        </variation>
                     </view>
-                    <navigationItem key="navigationItem" id="U1O-gC-rbS"/>
+                    <navigationItem key="navigationItem" id="U1O-gC-rbS">
+                        <barButtonItem key="rightBarButtonItem" title="Logout" id="hJE-Ay-Jna">
+                            <connections>
+                                <action selector="logout" destination="C1e-JL-lFR" id="1B5-a8-tRA"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="btnLogin" destination="x2m-HZ-CTH" id="XOW-gY-GzD"/>
                         <outlet property="btnProfile" destination="3yO-4r-TAf" id="3VP-cM-Zv4"/>
